--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
     </div>
     <div id="seatingPlan"></div>
     <script src="script.js"></script>
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyAi96_1W8HdxPDDkg5qe7q6qt7SfldXJRk",
+    authDomain: "seating-plan-3.firebaseapp.com",
+    projectId: "seating-plan-3",
+    storageBucket: "seating-plan-3.appspot.com",
+    messagingSenderId: "322291307965",
+    appId: "1:322291307965:web:1b2bc59c58db2e1d54eed4",
+    measurementId: "G-7HP9GE7FW3"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
 <!-- partial -->
